--- a/style.css
+++ b/style.css
@@ -67,3 +67,36 @@ footer{
 .player-2{
     margin-left: 10px;
 }
+
+
+@media (max-width: 820px) {
+    .tennis img{
+        width: 300px;    
+    }    
+    
+    .players-scores{
+        font-size: 1.5rem;
+    }   
+    
+    label{
+        font-size: 1rem;
+    }
+    
+    footer{        
+        gap: 0.5rem;
+    }
+    
+    .btn{
+        width: 120px;        
+    }
+    
+    .left-player{
+        font-size: 1rem;        
+    }
+    .right-player{       
+        font-size: 1rem;
+    }
+    .reset{        
+        font-size: 1rem;
+    }
+}
